--- a/index.html
+++ b/index.html
@@ -64,6 +64,15 @@
                 <a href="#">LEARN MORE</a>
             </div>
         </div>
+        <br>
+        <div class="logo-brand">
+            <a href="https://www.instagram.com/ade.saputraa22">
+                <img src="img/twiter.png" alt="twiter">
+            </a>
+            <a href="https://www.facebook.com/ade.batank">
+                <img src="img/fb.png" alt="twiter">
+            </a>
+        </div>
     </div>
     <!-- Section End -->
 
